slidiron width bug fix on iPhone

--- a/themes/ab_theme/views/slidorion.scss
+++ b/themes/ab_theme/views/slidorion.scss
@@ -120,10 +120,17 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
-  
+@media (max-width: 500px) {
+  #accordion {
+    width : 275px;
+    }
+
+  #slider {
+    width   : 275px;
+    }
+
   #slidorion {
-    width                : 300px;     /* Set to slidorion width. Is equal to #slider + #accordion width */
+    width                : 275px;     /* Set to slidorion width. Is equal to #slider + #accordion width */
     height               : 400px;     /* Set to slidorion height. Is equal to #slider and #accordion height */
     left                 : 50%;
     padding              : 10px;
@@ -135,6 +142,17 @@
     -webkit-box-shadow   : 0 0 24px #bbb;
     -moz-box-shadow      : 0 0 24px #bbb;
     box-shadow           : 0 0 24px #bbb;
+  }
+
+  #slider {
+  display:  none;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  
+  #slidorion {
+    width                : 300px;     /* Set to slidorion width. Is equal to #slider + #accordion width */
   }
 
   #slider {
